<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_view_id1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/got"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/orange"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/text_view_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_id1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/got_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25dp"
        android:fontFamily="@font/got_font"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/image_view_id1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/got_img"
        android:layout_below="@id/text_view_id2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text_view_id3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_id1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/got_sub_title"
        android:textColor="@color/grey"
        android:textSize="20dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/text_view_id4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_id3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/question1"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edit_text_id1"
        android:layout_width="wrap_content"
        android:layout_below="@id/text_view_id4"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:hint="@string/fav_char"/>

    <TextView
        android:id="@+id/text_view_id5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_id1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/question2"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/linear_layout_id1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_id5"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/text_view_id6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/range_0"
            android:textColor="@color/grey"
            android:padding="10dp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tickColor="@color/black"
            android:layout_weight="8" />

        <TextView
            android:id="@+id/text_view_id7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/range_1"
            android:textColor="@color/grey"
            android:padding="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_id8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_id1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/rate"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:padding="10dp" />

    <RatingBar
        android:id="@+id/rating_bar_id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_id8"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:numStars="5"
        android:stepSize="0.5"
        android:theme="@style/Widget.AppCompat.RatingBar" />

    <android.widget.Button
        android:id="@+id/button_id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_bar_id1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit_btn"
        android:textStyle="bold"
        android:background="@drawable/custom_background"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"/>

    <android.widget.Button
        android:id="@+id/button_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_bar_id1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/gotwiki_btn"
        android:textStyle="bold"
        android:background="@drawable/custom_background"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"/>
</RelativeLayout>